--- a/CG_FinalModule/src/main/resources/application.properties
+++ b/CG_FinalModule/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 spring.application.name=CG_FinalModule
 spring.datasource.url=jdbc:mysql://localhost:3306/FinalModule?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=trantheky0411
+spring.datasource.password=kjfhjhh12345
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-spring.messages.basename=messages
-spring.messages.encoding=UTF-8
