--- a/CG_FinalModule/src/main/resources/application.properties
+++ b/CG_FinalModule/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=CG_FinalModule
 spring.datasource.url=jdbc:mysql://localhost:3306/FinalModule2?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=732004
+spring.datasource.password=nguyenbaoanhthu
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
