--- a/finalModule/finalModule/src/main/resources/application.properties
+++ b/finalModule/finalModule/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=finalModule
+spring.application.name=finalmodule
+spring.datasource.url=jdbc:mysql://localhost:3306/finalModule?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=kjfhjhh12345
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.messages.basename=messages
+spring.messages.encoding=UTF-8
