--- a/finalModule/finalModule/build.gradle
+++ b/finalModule/finalModule/build.gradle
@@ -34,6 +34,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'com.cloudinary:cloudinary-http44:1.29.0'
+
 }
 
 tasks.named('test') {
