--- a/finalModule/finalModule/src/main/resources/application.properties
+++ b/finalModule/finalModule/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=finalmodule
 spring.datasource.url=jdbc:mysql://localhost:3306/finalCodeGymModule?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=kjfhjhh12345
+spring.datasource.password=trantheky0411
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -10,10 +10,6 @@ spring.jpa.open-in-view=false
 
 spring.messages.basename=messages
 spring.messages.encoding=UTF-8
-
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
-spring.web.resources.static-locations=classpath:/static/
 
 cloudinary.cloud-name=dir2phol8
 cloudinary.api-key=926538763833835
