--- a/finalModule/finalModule/build.gradle
+++ b/finalModule/finalModule/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'com.cloudinary:cloudinary-http44:1.29.0'
 
 }
