--- a/finalModule/finalModule/src/main/resources/application.properties
+++ b/finalModule/finalModule/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=finalmodule
 spring.datasource.url=jdbc:mysql://localhost:3306/finalCodeGymModule?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=nguyenbaoanhthu
+spring.datasource.password=kjfhjhh12345
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -19,4 +19,9 @@ cloudinary.api-secret=zAH0ffWthCGLOSrugcR4YfTqBW8
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=50MB
+
+server.error.include-message=always
+server.error.include-stacktrace=always
+server.error.include-binding-errors=always
+
 
