--- a/finalModule/finalModule/src/main/resources/application.properties
+++ b/finalModule/finalModule/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=finalmodule
-spring.datasource.url=jdbc:mysql://localhost:3306/finalCodeGymModule21?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/finalCodeGymModule?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=01112004
+spring.datasource.password=trantheky0411
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
