--- a/finalModule/finalModule/build.gradle
+++ b/finalModule/finalModule/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
 	//pdf
 	implementation 'com.itextpdf:itext7-core:9.1.0'
+	implementation 'org.apache.poi:poi-ooxml:5.3.0'
 }
 
 tasks.named('test') {
