--- a/finalModule/finalModule/src/main/resources/application.properties
+++ b/finalModule/finalModule/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=finalmodule
-spring.datasource.url=jdbc:mysql://localhost:3306/finalCodeGymModule?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/finalCodeGymModule8?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 
-spring.datasource.password=nguyenbaoanhthu
+spring.datasource.password=732004
 
 
 spring.jpa.hibernate.ddl-auto=update
@@ -27,3 +27,4 @@ server.error.include-stacktrace=always
 server.error.include-binding-errors=always
 
 
+file.export.dir=./exported-reports/
