--- a/finalModule/finalModule/src/main/resources/application.properties
+++ b/finalModule/finalModule/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/finalCodeGymModule?createDatab
 spring.datasource.username=root
 spring.datasource.password=nguyenbaoanhthu
 
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -20,3 +21,9 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=50MB
 
+server.error.include-message=always
+server.error.include-stacktrace=always
+server.error.include-binding-errors=always
+
+
+file.export.dir=./exported-reports/
