--- a/finalModule/finalModule/src/main/resources/application.properties
+++ b/finalModule/finalModule/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=finalmodule
-spring.datasource.url=jdbc:mysql://localhost:3306/finalCodeGymModule?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/finalCodeGymModule23?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 
-spring.datasource.password=nguyenbaoanhthu
+spring.datasource.password=01112004
 
 
 spring.jpa.hibernate.ddl-auto=update
