--- a/finalModule/finalModule/src/main/resources/application.properties
+++ b/finalModule/finalModule/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=finalmodule
-spring.datasource.url=jdbc:mysql://localhost:3306/finalCodeGymModule?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/finalCodeGymModule8?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=120193
+spring.datasource.password=732004
 
 
 spring.jpa.hibernate.ddl-auto=update
@@ -14,7 +14,7 @@ spring.messages.basename=messages
 spring.messages.encoding=UTF-8
 
 cloudinary.cloud-name=dir2phol8
-cloudinary.api-key=926538763833835  
+cloudinary.api-key=926538763833835
 cloudinary.api-secret=zAH0ffWthCGLOSrugcR4YfTqBW8
 
 spring.servlet.multipart.enabled=true
