--- a/finalModule/finalModule/src/main/resources/application.properties
+++ b/finalModule/finalModule/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=finalmodule
 spring.datasource.url=jdbc:mysql://localhost:3306/finalCodeGymModule70?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 
-spring.datasource.password=120193
+spring.datasource.password=01112004
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
